# crypto-ticker

./: README.md  pyproject.toml
app/: alerts.py  cleanup.py  conftest.py  database.py  feed.py  index.html  main.py  manager.py  state.py  test_cleanup.py  test_manager.py
app/routes/: http.py  ws.py
